kubernetes/istio/virtualservices/jellyfin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jellyfin
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - internal-gateway
  http:
    - match:
        - uri:
            prefix: /jellyfin
      route:
        - destination:
            host: jellyfin.videos.svc.cluster.local
            port:
              number: 80
